implementing doubly linked list

--- a/DataStructure.Tests/DataStructure.Tests.csproj
+++ b/DataStructure.Tests/DataStructure.Tests.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BTreeTests.cs" />
+    <Compile Include="DoubleLinkedListTests.cs" />
     <Compile Include="LinkedListTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
