--- a/BTree.Lib/BTree.Lib.csproj
+++ b/BTree.Lib/BTree.Lib.csproj
@@ -8,8 +8,8 @@
     <ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BTree.Lib</RootNamespace>
-    <AssemblyName>BTree.Lib</AssemblyName>
+    <RootNamespace>DataStructures.BTree.Lib</RootNamespace>
+    <AssemblyName>DataStructures.BTree.Lib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
