--- a/DataStructure.Tests/DataStructure.Tests.csproj
+++ b/DataStructure.Tests/DataStructure.Tests.csproj
@@ -8,8 +8,8 @@
     <ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DataStructure.Tests</RootNamespace>
-    <AssemblyName>DataStructure.Tests</AssemblyName>
+    <RootNamespace>DataStructures.DataStructure.Tests</RootNamespace>
+    <AssemblyName>DataStructures.DataStructure.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
